# comsoc-stva

./: .gitignore  Main.hs  README.md  comsoc-stva.cabal  stack.yaml
Comsoc/: STVA.hs
main/: Main.hs
src/Comsoc/: Interface.hs  STVA.hs
test/: Test.hs
