name:                comsoc-stva
version:             0.1.0.0
synopsis:            implementation of Single Transferrable Vote algorithm
homepage:            https://github.com/jwaldmann/comsoc-stva
license:             GPL-3
license-file:        LICENSE
author:              Johannes Waldmann
maintainer:          johannes.waldmann@htwk-leipzig.de
category:            Math

build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules: Comsoc.STVA, Comsoc.Interface
  build-depends:       base ==4.* , parsec, pretty, containers

executable comsoc-stva
  hs-source-dirs: main
  main-is: Main.hs
  build-depends:       base ==4.*, comsoc-stva

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends: base==4.*, comsoc-stva